# cmsg

./: Makefile.am  configure.ac  local-install.sh
cmsg/: Makefile.am  cmsg.c  cmsg.h  cmsg.pc.in  cmsg_client.c  cmsg_client.h  cmsg_composite_client.c  cmsg_composite_client.h  cmsg_error.h  cmsg_private.h  cmsg_pub.c  cmsg_pub.h  cmsg_queue.c  cmsg_queue.h  cmsg_server.c  cmsg_server.h  cmsg_sub.c  cmsg_sub.h  cmsg_sub_service.pb-c.c  cmsg_sub_service.pb-c.h  cmsg_sub_service.proto  cmsg_transport.c  cmsg_transport.h  cmsg_transport_cpg.c  cmsg_transport_loopback.c  cmsg_transport_tcp.c  cmsg_transport_tipc.c  cmsg_transport_tipc_broadcast.c  cmsg_transport_udt.c  cmsg_transport_unix.c  cmsg_unit_tests.c  protobuf-c-cmsg-queue.c  protobuf-c-cmsg-sub-service.pb-c.c  protobuf-c-cmsg-sub-service.pb-c.h  protobuf-c-cmsg.c  protobuf-c-cmsg.h  protobuf-c-private.h  protobuf-c.c  protobuf-c.h
cmsg-proxy/: Makefile.am  cmsg_proxy.c  cmsg_proxy.h  cmsg_proxy_config.h  cmsg_proxy_http_streaming_api.h  cmsg_proxy_mem.c  cmsg_proxy_mem.h  cmsg_proxy_unit_tests.c  cmsg_proxy_unit_tests.proto  cmsg_proxy_unit_tests_functional.c  cmsgproxyconfig.pc.in  cmsgproxyhttpstreamingapi.pc.in  common.proto  file_upload_protobuf.pc.in
cmsg-proxy/include/: cmsg_proxy.h
cmsg-proxy/src/: ant_result.proto  cmsg_proxy.c  cmsg_proxy_config.c  cmsg_proxy_counters.c  cmsg_proxy_counters.h  cmsg_proxy_http_streaming.c  cmsg_proxy_http_streaming.h  cmsg_proxy_http_streaming_api.c  cmsg_proxy_index.c  cmsg_proxy_index.h  cmsg_proxy_input.c  cmsg_proxy_input.h  cmsg_proxy_mem.c  cmsg_proxy_mem.h  cmsg_proxy_output.c  cmsg_proxy_output.h  cmsg_proxy_passthrough.c  cmsg_proxy_private.h  cmsg_proxy_tree.c  cmsg_proxy_tree.h  common.proto  file_upload.proto  http_streaming.proto  simple_shm.c  simple_shm.h
cmsg-proxy/test/functional/: cmsg_proxy_functional_tests.c  cmsg_proxy_functional_tests.proto  cmsg_proxy_passthrough_functional_tests.c  cmsg_proxy_passthrough_functional_tests.proto
cmsg-proxy/test/unit/: cmsg_proxy_mem_unit_tests.c  cmsg_proxy_unit_tests.c  cmsg_proxy_unit_tests.proto
cmsg-test/: Makefile.am  cmsg-test.c  cmsg-test.proto  example-client.c  example-server.c  test-cmsg.proto
cmsg-tools/: Makefile.am  cmsg-prof.c  cmsg-prof.proto
cmsg/include/cmsg/: cmsg.h  cmsg_ant_result.h  cmsg_broadcast_client.h  cmsg_client.h  cmsg_composite_client.h  cmsg_crypto.h  cmsg_debug.h  cmsg_error.h  cmsg_glib_helpers.h  cmsg_liboop_helpers.h  cmsg_mesh.h  cmsg_private.h  cmsg_ps_config.h  cmsg_pss_config.h  cmsg_pthread_helpers.h  cmsg_pub.h  cmsg_queue.h  cmsg_server.h  cmsg_sl.h  cmsg_sl_config.h  cmsg_sub.h  cmsg_supported_service.h  cmsg_transport.h  cmsg_validation.h
cmsg/src/: ant_result.proto  cmsg.c  cmsg.proto  cmsg_ant_result.c  cmsg_client.c  cmsg_client_private.h  cmsg_composite_client.c  cmsg_composite_client_private.h  cmsg_crypto.c  cmsg_debug.c  cmsg_glib_helpers.c  cmsg_liboop_helpers.c  cmsg_mesh.c  cmsg_protobuf-c.c  cmsg_protobuf-c.h  cmsg_pthread_helpers.c  cmsg_pub.c  cmsg_queue.c  cmsg_server.c  cmsg_server_private.h  cmsg_sub.c  file_response.proto  supported_service.proto  validation.proto
cmsg/src/broadcast_client/: cmsg_broadcast_client.c  cmsg_broadcast_client_conn_mgmt.c  cmsg_broadcast_client_private.h
cmsg/src/publisher_subscriber/: cmsg_ps_api.c  cmsg_ps_api_private.h  cmsg_pss_api.c  cmsg_pss_api_private.h  cmsg_pub.c  cmsg_pub_private.h  cmsg_sub.c  cmsg_sub_private.h  cmsg_sub_service.proto  configuration.c  configuration.proto  data.c  data.h  main.c  publish.c  publish.h  publish.proto  remote_sync.c  remote_sync.h  remote_sync.proto  update.proto
cmsg/src/publisher_subscriber/test/: configuration_unit_tests.c  data_unit_tests.c  remote_sync_unit_tests.c
cmsg/src/service_listener/: cmsg_sl_api.c  cmsg_sl_api_private.h  configuration.c  configuration.h  configuration.proto  data.c  data.h  events.proto  main.c  netlink.c  netlink.h  process_watch.c  process_watch.h  remote_sync.c  remote_sync.h  remote_sync.proto
cmsg/src/service_listener/test/: configuration_unit_tests.c  data_unit_tests.c  remote_sync_unit_tests.c
cmsg/src/shell_application/: cmsg_shell_application.c
cmsg/src/supported_service/: cmsg_supported_service.c
cmsg/src/transport/: cmsg_transport.c  cmsg_transport_cpg.c  cmsg_transport_forwarding.c  cmsg_transport_loopback.c  cmsg_transport_private.h  cmsg_transport_tcp.c  cmsg_transport_tipc.c  cmsg_transport_tipc_broadcast.c  cmsg_transport_udt.c  cmsg_transport_unix.c
cmsg/src/validation/: cmsg_validation.c
cmsg/test/functional/: README  broadcast_client_tests.c  client_forwarding_tests.c  client_queuing_tests.c  client_server_crypto_tests.c  client_server_echo_tests.c  client_server_oneway_tests.c  client_server_rpc_tests.c  cmsg_functional_tests.proto  cmsg_service_listener_tests.c  file_response_tests.c  glib_helpers_tests.c  pthread_helpers_tests.c  publisher_queuing_tests.c  publisher_subscriber_tests.c  server_queuing_tests.c  server_side_validation.c  setup.c  setup.h  supported_service_tests.c  tcp_connection_cache_tests.c
cmsg/test/unit/: cmsg_composite_client_unit_tests.c  cmsg_pub_unit_tests.c  cmsg_transport_unit_tests.c  cmsg_unit_tests.c  cmsg_unit_tests.proto
protoc-c/: Makefile.am  c_atl_generator.cc  c_atl_generator.h  c_bytes_field.cc  c_bytes_field.h  c_enum.cc  c_enum.h  c_enum_field.cc  c_field.cc  c_field.h  c_file.cc  c_file.h  c_generator.cc  c_helpers.cc  c_helpers.h  c_helpers_cmsg.cc  c_helpers_cmsg.h  c_message.cc  c_message.h  c_message_field.cc  c_primitive_field.cc  c_service.cc  c_service.h  c_string_field.cc  c_string_field.h  http.proto  main.cc  supported_service.proto  validation.proto
protoc-cmsg/: c_atl_generator.cc  c_atl_generator.h  c_bootstrap_unittest.cc  c_bytes_field.cc  c_bytes_field.h  c_enum.cc  c_enum_field.cc  c_enum_field.h  c_extension.cc  c_field.cc  c_file.h  (+14 more)
src/test/: Makefile.am  README-ATL  cmsg-client.c  cmsg-server.c  cmsg-test-valgrind  cmsg-test.c  example-client.c  example-server.c  test-cmsg.proto  test-generated-code.c  test-generated-code2.c  test-rpc.c  test.proto
(+63 files in other folders)
