bin_PROGRAMS =
lib_LTLIBRARIES =
BUILT_SOURCES =
CLEANFILES =

pkgconfiglibdir = $(libdir)/pkgconfig
pkgconfiglib_DATA = cmsg.pc

AM_CPPFLAGS = \
	-include $(top_builddir)/config.h \
	-I${top_srcdir}/protobuf-c \
	-I${top_builddir} \
	-I${top_srcdir}
AM_CFLAGS = -Wall ${my_CFLAGS} $(GLIB_CFLAGS)
AM_CXXFLAGS = -Werror
AM_LDFLAGS =

#
# protoc-cmsg
#

if BUILD_PROTOC_CMSG

bin_PROGRAMS += protoc-cmsg/protoc-cmsg
protoc_cmsg_protoc_cmsg_SOURCES = \
	protoc-c/c_atl_generator.cc \
	protoc-c/c_atl_generator.h \
	protoc-c/c_bytes_field.cc \
	protoc-c/c_bytes_field.h \
	protoc-c/c_enum.cc \
	protoc-c/c_enum.h \
	protoc-c/c_enum_field.cc \
	protoc-c/c_enum_field.h \
	protoc-c/c_extension.cc \
	protoc-c/c_extension.h \
	protoc-c/c_field.cc \
	protoc-c/c_field.h \
	protoc-c/c_file.cc \
	protoc-c/c_file.h \
	protoc-c/c_generator.cc \
	protoc-c/c_generator.h \
	protoc-c/c_helpers.cc \
	protoc-c/c_helpers.h \
	protoc-c/c_message.cc \
	protoc-c/c_message.h \
	protoc-c/c_message_field.cc \
	protoc-c/c_message_field.h \
	protoc-c/c_primitive_field.cc \
	protoc-c/c_primitive_field.h \
	protoc-c/c_service.cc \
	protoc-c/c_service.h \
	protoc-c/c_string_field.cc \
	protoc-c/c_string_field.h \
	protoc-c/main.cc
protoc_cmsg_protoc_cmsg_CXXFLAGS = \
	$(AM_CXXFLAGS) \
	$(protobuf_CFLAGS)
protoc_cmsg_protoc_cmsg_LDADD = \
	$(protobuf_LIBS) \
	-lprotoc \
	-lprotobuf

endif # BUILD_PROTOC_CMSG

#
# libcmsg
#

if BUILD_CMSG

LIBCMSG_CURRENT=1
LIBCMSG_REVISION=0
LIBCMSG_AGE=0

lib_LTLIBRARIES += \
	cmsg/libcmsg.la

cmsg/cmsg_sub_service.pb-c.c cmsg/cmsg_sub_service.pb-c.h: $(PROTOC_CMSG_PATH)$(EXEEXT) $(top_srcdir)/cmsg/cmsg_sub_service.proto
	$(AM_V_GEN)$(PROTOC_CMSG_PATH)$(EXEEXT) -I$(top_srcdir) --c_out=. cmsg/cmsg_sub_service.proto

# Put the autogenerated files at the start of the list so that
# they get compiled first. Perhaps there is a cleaner way (with
# dependencies) to do this.
cmsg_libcmsg_la_SOURCES = \
	cmsg/cmsg_sub_service.pb-c.c \
	cmsg/cmsg_sub_service.pb-c.h \
	cmsg/cmsg.c \
	cmsg/cmsg.h \
	cmsg/cmsg_private.h \
	cmsg/cmsg_error.h \
	cmsg/cmsg_client.c \
	cmsg/cmsg_client.h \
	cmsg/cmsg_composite_client.c \
	cmsg/cmsg_composite_client.h \
	cmsg/cmsg_pub.c \
	cmsg/cmsg_pub.h \
	cmsg/cmsg_queue.c \
	cmsg/cmsg_queue.h \
	cmsg/cmsg_server.c \
	cmsg/cmsg_server.h \
	cmsg/cmsg_sub.c \
	cmsg/cmsg_sub.h \
	cmsg/cmsg_transport.c \
	cmsg/cmsg_transport.h \
	cmsg/cmsg_transport_loopback.c \
	cmsg/cmsg_transport_tcp.c \
	cmsg/cmsg_transport_tipc.c \
	cmsg/cmsg_transport_udt.c \
	cmsg/cmsg_transport_unix.c

cmsg_libcmsg_la_LIBADD = $(GLIB_LIBS) -lutility -lprotobuf-c

if HAVE_COUNTERD
cmsg_libcmsg_la_LIBADD += -lcntr
endif

if HAVE_VCSTACK
cmsg_libcmsg_la_SOURCES += \
	cmsg/cmsg_transport_cpg.c \
	cmsg/cmsg_transport_tipc_broadcast.c
cmsg_libcmsg_la_LIBADD += -lcpg -lcoroipcc
endif

cmsg_libcmsg_la_CFLAGS = -Werror $(AM_CFLAGS)

cmsg_libcmsg_la_LDFLAGS = $(AM_LDFLAGS) \
	-version-info $(LIBCMSG_CURRENT):$(LIBCMSG_REVISION):$(LIBCMSG_AGE) \
	-no-undefined

endif # BUILD_CMSG

if BUILD_CMSG_PROXY

LIBCMSGPROXY_CURRENT=1
LIBCMSGPROXY_REVISION=0
LIBCMSGPROXY_AGE=0

lib_LTLIBRARIES += \
	cmsg-proxy/libcmsgproxy.la

cmsg_proxy_libcmsgproxy_la_SOURCES = \
	cmsg-proxy/cmsg_proxy.c \
	cmsg-proxy/cmsg_proxy.h \
	cmsg-proxy/cmsg_proxy_mem.c \
	cmsg-proxy/cmsg_proxy_mem.h

cmsg_proxy_libcmsgproxy_la_LIBADD = \
	$(GLIB_LIBS) \
	-lcmsg \
	-ljansson \
	-lprotobuf2json-c \
	-lcommon_proto_api \
	-lsystem_awplus

cmsg_proxy_libcmsgproxy_la_CFLAGS = -Werror $(AM_CFLAGS)

cmsg_proxy_libcmsgproxy_la_LDFLAGS = $(AM_LDFLAGS) \
	-version-info $(LIBCMSGPROXY_CURRENT):$(LIBCMSGPROXY_REVISION):$(LIBCMSGPROXY_AGE) \
	-no-undefined

endif # BUILD_CMSG_PROXY

if BUILD_UNITTEST
cmsg-proxy/cmsg_proxy_unit_tests_proxy_def.c cmsg-proxy/cmsg_proxy_unit_tests_proxy_def.h: $(PROTOC_CMSG_PATH)$(EXEEXT) $(top_srcdir)/cmsg-proxy/cmsg_proxy_unit_tests.proto
	$(AM_V_GEN)$(PROTOC_CMSG_PATH)$(EXEEXT) -I$(top_srcdir) --c_out=. cmsg-proxy/cmsg_proxy_unit_tests.proto

bin_PROGRAMS += cmsg-proxy/cmsg_proxy_unit_tests
cmsg_proxy_cmsg_proxy_unit_tests_SOURCES = \
	cmsg-proxy/cmsg_proxy_unit_tests_proxy_def.c \
	cmsg-proxy/cmsg_proxy_unit_tests_proxy_def.h \
	cmsg-proxy/cmsg_proxy_unit_tests_api_auto.c \
	cmsg-proxy/cmsg_proxy_unit_tests_api_auto.h \
	cmsg-proxy/cmsg_proxy_unit_tests.pb-c.c \
	cmsg-proxy/cmsg_proxy_unit_tests.pb-c.h \
	cmsg-proxy/cmsg_proxy_unit_tests.c
cmsg_proxy_cmsg_proxy_unit_tests_CFLAGS  = $(AM_CFLAGS) -g $(NOVAPROVA_CFLAGS)
cmsg_proxy_cmsg_proxy_unit_tests_LDFLAGS = -static
cmsg_proxy_cmsg_proxy_unit_tests_LDADD   = $(NOVAPROVA_LIBS) $(GLIB_LIBS) \
                                           -lcmsg -lprotobuf-c -lprotobuf2json-c \
                                           -ljansson -lcommon_proto_api
endif

#
# cmsg-test
#

if BUILD_CMSG_TEST

bin_PROGRAMS += cmsg-test/cmsg-test
cmsg_test_cmsg_test_SOURCES = \
	cmsg-test/cmsg-test.c \
	cmsg-test/cmsg-test_api_auto.c \
	cmsg-test/cmsg-test_impl_auto.c \
	cmsg-test/cmsg-test.pb-c.c

cmsg_test_cmsg_test_CXXFLAGS = \
	$(AM_CXXFLAGS) \
	$(protobuf_CFLAGS)

cmsg_test_cmsg_test_LDADD = \
	$(protobuf_LIBS) \
	-lcmsg

cmsg-test/cmsg-test.pb-c.c cmsg-test/cmsg-test.pb-c.h: $(top_builddir)/protoc-cmsg/protoc-cmsg$(EXEEXT) $(top_srcdir)/cmsg-test/cmsg-test.proto
	$(AM_V_GEN)$(top_builddir)/protoc-cmsg/protoc-cmsg$(EXEEXT) -I$(top_srcdir) --c_out=$(top_builddir) $(top_srcdir)/cmsg-test/cmsg-test.proto

BUILT_SOURCES += \
	cmsg-test/cmsg-test.pb-c.c cmsg-test/cmsg-test.pb-c.h \
	cmsg-test/cmsg-test_api_auto.c cmsg-test/cmsg-test_api_auto.h \
	cmsg-test/cmsg-test_impl_auto.c cmsg-test/cmsg-test_impl_auto.h \
	cmsg-test/cmsg-test.pb-c.c cmsg-test/cmsg-test.pb-c.h \
	cmsg-test/cmsg-test_impl_auto-tmp_stubs.c \
	cmsg-test/cmsg-test_types_auto.h

endif # BUILD_CMSG_TEST

#
#
#

CLEANFILES += $(BUILT_SOURCES)

dist-hook:
	rm -vf `find $(top_distdir) -name '*.pb-c.[ch]' -o -name '*.pb.cc' -o -name '*.pb.h'`

install-data-hook:
	$(MKDIR_P) $(DESTDIR)$(includedir)/google/protobuf-c
	cd $(DESTDIR)$(includedir)/google/protobuf-c && rm -vf protobuf-c.h
	cd $(DESTDIR)$(includedir)/google/protobuf-c && $(LN_S) ../../protobuf-c/protobuf-c.h protobuf-c.h
